--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!--Header containing links and logo-->
     <header>
-      <img src="/images/kate-2.png" alt="logo kate neilsen">
+      <img src="images/katelogo.png" alt="logo kate neilsen">
         <nav class="navlinks">
           <a href="#home">Home</a>
           <a href="#about">About</a>
