--- a/index.html
+++ b/index.html
@@ -32,24 +32,29 @@
         <p>I have been a teacher for 10 years. I am  always finding new ways to integrate technology into the classroom. A few years ago I worked with a team of teachers to write and pilot computer science for all modules.</p>
           
         <p>Now, as a software engineering student at Thinkful, I continue to learn and work through the modules for software engineering, I realize there are many skills I have acquired over the years of teaching that will help me as I continue to learn and work through the modules of software engineering. Some of these skills include: </p>
-          <!--unordered list -->
-          <ul>
+          <!--ordered list -->
+          <ol>
             <li>a passion to learn and grow</li>
             <li>creative problem-solving</li>
             <li>experienced team player</li>
-          </ul>
+          </ol>
         <h3>Other Interests</h3>
-        <p>When I am not working or studying, I am spending my time with my 8 year old son. We enjoy rock climbing and rollerblading.</p>
+        <p>When I am not working or studying, I am spending my time with my 8 year old son. We enjoy: </p>
+        <ul>
+          <li>Rock climbing</li>
+          <li>Rollerblading</li>
+          <li>Bike rides</li>
+          <li>Hiking</li>
+          <li>Swimming</li>
+        </ul>
       </article>
  <!--contact article contains links to linkedin, github, and email -->
       <article id="contact">
         <h2>Contact</h2>
         <p>Please feel free to contact or follow me:</p>
-  <!--ordered list -->
-        <ol>
-          <li><a href="mailto:neilsenk09@gmail.com">Email</a></li>
-          <li><a href="https://github.com/kateneilsen">GitHub</a></li>
-          <li><a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile&lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact_info%3BNUfuSFa1QPSP3pkKhpFP5w%3D%3D">LinkedIn</a>              </li>
+          <p><a href="mailto:neilsenk09@gmail.com">Email</a></p>
+          <p><a href="https://github.com/kateneilsen">GitHub</a></p>
+          <p><a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile&lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact_info%3BNUfuSFa1QPSP3pkKhpFP5w%3D%3D">LinkedIn</a></p>
 
         </ol>
       </article>
