--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -64,10 +64,6 @@
     <footer>
       <p>©Kaitlin Neilsen</p>
     </footer>
-
-    
-
-    
     <script src="script.js"></script>
   </body>
 </html>
