--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
   <!--about article contains info about me -->
       <article id="about">
         <h2>About Me</h2>
-        <p>I have been a teacher for 10 years. I am  always finding new ways to integrate technology into the classroom. A few years ago I worked with a team of teachers to write and pilot computer science for all modules.</p>
+        <p>I have been a teacher for 10 years. I am always finding new ways to integrate technology into the classroom. A few years ago I worked with a team of teachers to write and pilot computer science for all modules.</p>
           
-        <p>Now, as a software engineering student at Thinkful, I continue to learn and work through the modules for software engineering, I realize there are many skills I have acquired over the years of teaching that will help me as I continue to learn and work through the modules of software engineering. Some of these skills include: </p>
+        <p>Now, as a software engineering student at Thinkful, I realize there are many skills I have acquired over the years of teaching that will help me as I continue to learn and and grow as a software engineer. Some of these skills include: </p>
           <!--ordered list -->
           <ol>
-            <li>a passion to learn and grow</li>
-            <li>creative problem-solving</li>
-            <li>experienced team player</li>
+            <li>A passion to learn and grow</li>
+            <li>Creative problem-solving</li>
+            <li>Experienced team player</li>
           </ol>
         <h3>Other Interests</h3>
         <p>When I am not working or studying, I am spending my time with my 8 year old son. We enjoy: </p>
